# srtviz

./: .gitignore  CMakeLists.txt  README.md
include/: algorithms.h  utils.h
include/algorithms/: bubble.h  insertion.h  mergesort.h  selection.h
source/: main.cpp
source/algorithms/: bubble.cpp  insertion.cpp  mergesort.cpp  selection.cpp
